--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "engines": {
     "node": "20.x"
   },
+  
+  "packageManager": "pnpm@9.12.3",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
